update tutorial, fix minor problems

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -387,6 +387,7 @@ body{
                 background-color: white; 
             }
             #college {
+                padding: 10px;
                 margin: 5px;
                 font-size: 40px;
                 border: solid #76849A 5px;
