--- a/public/css/style.css
+++ b/public/css/style.css
@@ -321,6 +321,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: auto;
 }
 
 .content .raccoonbookBox .hide {
@@ -687,7 +688,7 @@ body {
 }
 
 .calendar .calendarBox .dateBox .alldays .date #emojiOfTheDay {
-  margin-top: 10px;
+  margin-top: 5px;
   width: 60px;
   height: 60px;
 }
