add some overflow 2

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -112,6 +112,8 @@ body{
             padding: 10%;
             margin: 10%;
 
+            overflow:auto;
+
             border-radius: 20px;
             border: solid 3px #76849A;
             font-size: 50px;
