--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,6 +116,7 @@ body {
   width: 70%;
   padding: 10%;
   margin: 10%;
+  overflow: auto;
   border-radius: 20px;
   border: solid 3px #76849A;
   font-size: 50px;
