--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -25,7 +25,9 @@
 	</canvas>
 
 	<div class="content homePage">
-		<button type="button" id="startScanButton">Start</button>
+		<button type="button" id="startScanButton">
+			<p>Start</p>
+		</button>
 		<div class="modal" id="startScanDiv">
 			<div class="modalMessage">
 				<p>
