--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -299,6 +299,7 @@ body{
     }
 
     #startScanButton {
+        -webkit-appearance:none;
         font-size: 45px;
         position: fixed;
         width: 130px;
