--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -45,17 +45,17 @@
 
 	<div class="bar">
 		<div>
-			<button type="button" class="menu" id="calendarButton" onclick="window.location='calendar.handlebars'">
+			<button type="button" class="menu" id="calendarButton" onclick="window.location='calendar'">
 				<img src="../images/Navigation/calendar.png">
 			</button>
 		</div>
 		<div>
-			<button type="button" class="menu" id="bookButton" onclick="window.location='book.handlebars'">
+			<button type="button" class="menu" id="bookButton" onclick="window.location='book'">
 				<img src="../images/Navigation/photoalbum.png">
 			</button>
 		</div>
 		<div>
-			<img src="../images/Navigation/home.png" class="menu" id="homeButton" onclick="window.location='home.handlebars'">
+			<img src="../images/Navigation/home.png" class="menu" id="homeButton" onclick="window.location='homeA'">
 		</div>
 		<div>
 			<button type="button" class="menu" id="marketButton">
@@ -68,7 +68,7 @@
 			</button>
 		</div>
 		<div>
-			<button type="button" class="menu" id="settingButton" onclick="window.location='setting.handlebars'">
+			<button type="button" class="menu" id="settingButton" onclick="window.location='setting'">
 				<img src="../images/Navigation/settings.png">
 			</button>
 		</div>
