--- a/views/tutorial.handlebars
+++ b/views/tutorial.handlebars
@@ -30,7 +30,7 @@
                 $(this).css("background-color", "rgb(157, 255, 128)");
             }
         } else {
-            window.location = "home.handlebars";
+            window.location = "homeA";
         }
     })
 
@@ -47,7 +47,7 @@
     })
 
     $("#skipBtn").on("click", function () {
-        window.location = "home.handlebars";
+        window.location = "homeA";
     })
 
 </script>
