--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,30 @@
 <html>
 
 <head>
+	<!-- Google Analytics Content Experiment code -->
+	<script>function utmx_section() { } function utmx() { } (function () {
+			var
+				k = '170632667-0', d = document, l = d.location, c = d.cookie;
+			if (l.search.indexOf('utm_expid=' + k) > 0) return;
+			function f(n) {
+				if (c) {
+					var i = c.indexOf(n + '='); if (i > -1) {
+						var j = c.
+							indexOf(';', i); return escape(c.substring(i + n.length + 1, j < 0 ? c.
+								length : j))
+					}
+				}
+			} var x = f('__utmx'), xx = f('__utmxx'), h = l.hash; d.write(
+				'<sc' + 'ript src="' + 'http' + (l.protocol == 'https:' ? 's://ssl' :
+					'://www') + '.google-analytics.com/ga_exp.js?' + 'utmxkey=' + k +
+				'&utmx=' + (x ? x : '') + '&utmxx=' + (xx ? xx : '') + '&utmxtime=' + new Date().
+					valueOf() + (h ? '&utmxhash=' + escape(h.substr(1)) : '') +
+				'" type="text/javascript" charset="utf-8"><\/sc' + 'ript>')
+		})();
+	</script>
+	<script>utmx('url', 'A/B');</script>
+	<!-- End of Google Analytics Content Experiment code -->
+
 	<title>Raccoonal Home</title>
 
 	<!-- CSS -->
@@ -26,7 +50,11 @@
 
 	<div class="content homePage">
 		<button type="button" id="startScanButton">
+			{{#if viewAlt}}
+			<p>StartB</p>
+			{{else}}
 			<p>Start</p>
+			{{/if}}			
 		</button>
 		<div class="modal" id="startScanDiv">
 			<div class="modalMessage">
