--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -493,6 +493,9 @@
 		});
 
 		function resultDone() {
+			if ($('#resultMemo').val()) {
+				gtag("send", "event", 'memo', "inputMemo")
+			}
 			postResult($('#resultMemo').val(), obj);
 			$('#emotionRateList').replaceWith(resultOriginState);
 			$("#startScanButton").prop("disabled", false);
