--- a/public/css/style.css
+++ b/public/css/style.css
@@ -996,3 +996,13 @@ body {
   bottom: 1em;
   width: 220px;
 }
+
+#testAna {
+  position: fixed;
+  z-index: 1;
+  width: 200px;
+  height: 200px;
+  left: 1em;
+  top: 1em;
+  font-size: 50px;
+}
