--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -977,3 +977,13 @@ body{
         width: 220px;
     }
 }
+
+#testAna {
+    position: fixed;
+    z-index: 1;
+    width: 200px;
+    height: 200px;
+    left: 1em;
+    top: 1em;
+    font-size: 50px;
+}
